--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "app-beyond",
+  "name": "david-cv",
   "version": "1.0.0",
   "private": true,
-  "description": "app-beyond",
+  "description": "David Avikasis' CV Website",
   "author": "David Avikasis",
   "keywords": [
     "gatsby"
@@ -17,16 +17,22 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.2.1",
+    "autoprefixer": "^10.4.13",
     "gatsby": "^5.2.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-mdx": "^5.3.1",
+    "gatsby-plugin-postcss": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-sitemap": "^6.3.1",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
