--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mdx-js/react": "^2.2.1",
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.0.3",
     "gatsby": "^5.2.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^3.3.2",
@@ -26,6 +27,7 @@
     "gatsby-plugin-postcss": "^6.3.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-source-contentful": "^8.3.1",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
     "lodash.debounce": "^4.0.8",
